--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,9 @@
 /* frontend/src/index.css */
+
+body {
+  background-color: #E5E7EB; /* Este é o código da cor para 'bg-gray-200' */
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,13 +32,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body, #root {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box; /* Garante que o padding não aumente o tamanho total */
 }
+
 
 h1 {
   font-size: 3.2em;
@@ -71,3 +77,6 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
